--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
         <div class="profile">
             <img src="./profile.jpg" alt="">
         </div>
+
+        <div class="block hide-desktop">
+            <div class="personal">
+                <p class="name"><span class="bold">Mosharof</span><span> Hossain</span></p>
+            </div>
+        </div>
+
         <div class="block ">
             <h4>Phone</h4>
             <a href="tel:+88 01715 757692">+88 01715 757692</a>
