--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <h1 class="name"><span class="bold">Mosharof</span><span class="light"> Hossain</span></h1>
             <p class="job">Web Developer</p>
             <p class="info">
-                A motivated Software Engineer proficient in backend development, integration and database design. An eclectic and agile thinker who love to solve challenging problems using appropriate optimizations.
+                A motivated Web Developer proficient in backend development, integration, database design and Front-end design. An eclectic and agile thinker who love to solve challenging problems using appropriate optimizations.
             </p>
         </div>
 
