--- a/index.html
+++ b/index.html
@@ -139,32 +139,32 @@
             <div class="samples">
                 <div class="item">
                     <img src="./sample1.png" alt="">
-                    <a href="https://www.myqrmed.com.au/">MyQRMed</a>
+                    <a href="https://www.myqrmed.com.au/" target="_blank">MyQRMed</a>
                     <p>A personalized medical Service. Built on Wix and Laravel.</p>
                 </div>
                 <div class="item">
                     <img src="./sample2.png" alt="">
-                    <a href="https://viewegerback.de/">ViewegerBack</a>
+                    <a href="https://viewegerback.de/" target="_blank">ViewegerBack</a>
                     <p>A food based E-commerce Site. Built on Wordpress & Raw PHP.</p>
                 </div>
                 <div class="item">
                     <img src="./sample3.png" alt="">
-                    <a href="https://benjaminshouse.com/">BenjaminsHouse</a>
+                    <a href="https://benjaminshouse.com/" target="_blank">BenjaminsHouse</a>
                     <p>An entertainment based blog site. Built on Custom theme Wordpress</p>
                 </div>
                 <div class="item">
                     <img src="./sample4.png" alt="">
-                    <a href="https://plusmedica-shop.ch/">Plusmedica-Shop</a>
+                    <a href="https://plusmedica-shop.ch/" target="_blank">Plusmedica-Shop</a>
                     <p>A medicine based E-commerce Site. Built on Wordpress & Raw PHP.</p>
                 </div>
                 <div class="item">
                     <img src="./sample5.png" alt="">
-                    <a href="https://www.immovision24.eu/">Immovision24</a>
+                    <a href="https://www.immovision24.eu/" target="_blank">Immovision24</a>
                     <p>A Property listing site</p>
                 </div>
                 <div class="item">
                     <img src="./sample6.png" alt="">
-                    <a href="https://p1.w-lu.de/">RECCE</a>
+                    <a href="https://p1.w-lu.de/" target="_blank">RECCE</a>
                     <p>A photo-shoot spots selling site</p>
                 </div>
             </div>
