--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <div class="block ">
             <h4>Github</h4>
-            <a href="https://github.com/mosharof85">https://github.com/mosharof85</a>
+            <a href="https://github.com/mosharof85" target="_blank">https://github.com/mosharof85</a>
         </div>
 
         <div class="block big">
